--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-49JRY572HX"></script>
+    <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-49JRY572HX"></script-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-215817657-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
-      gtag('config', 'G-49JRY572HX');
+      gtag('config', 'UA-215817657-1'); //showall
+      //gtag('config', 'G-49JRY572HX'); //play
+      
     </script>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
