Universal + Optimize IDs

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-49JRY572HX"></script>
-    <!--script async src="https://www.googletagmanager.com/gtag/js?id=UA-215817657-1"></script-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-215817657-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      //gtag('config', 'UA-215817657-1'); //showall
-      gtag('config', 'G-49JRY572HX'); //play
+      gtag('config', 'UA-215817657-1'); //showall
+      gtag('config', 'OPT-TVG6SQJ'); //play
+      //gtag('config', 'G-49JRY572HX'); //play
       
     </script>
     <!-- Google Tag Manager -->
