Fix para optimize, universal correcto

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'UA-215817657-1'); //showall
-      gtag('config', 'OPT-TVG6SQJ'); //play
+      //gtag('config', 'OPT-TVG6SQJ'); //optimize
+      gtag('config', 'G-49JRY572HX', { 'optimize_id': 'OPT-TVG6SQJ'});
       //gtag('config', 'G-49JRY572HX'); //play
       
     </script>
