--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-49JRY572HX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-215817657-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'UA-215817657-1'); //showall
+      //gtag('config', 'UA-215817657-1'); //showall
       //gtag('config', 'OPT-TVG6SQJ'); //optimize
-      gtag('config', 'G-49JRY572HX', { 'optimize_id': 'OPT-TVG6SQJ'});
+      gtag('config', 'UA-215817657-1', { 'optimize_id': 'OPT-TVG6SQJ'});
       //gtag('config', 'G-49JRY572HX'); //play
       
     </script>
