Fix antiparpadeo, era con Optimize, no con GTM

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- anti-flicker snippet (recommended)  -->
+    <!-- anti-flicker snippet ("antiparpadeo")  -->
     <style>.async-hide { opacity: 0 !important} </style>
     <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
     h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
     (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
     })(window,document.documentElement,'async-hide','dataLayer',4000,
-    {'UA-215817657-1':true});</script>
+    {'OPT-TVG6SQJ':true});</script>
+
+    <!-- EL PRÓXIMO SCRIPT ES LA CONEXIÓN CON ANALYTICS -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-215817657-1"></script>
     <script>
@@ -16,6 +18,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-215817657-1', { 'optimize_id': 'OPT-TVG6SQJ'});      
     </script>
+
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -23,6 +26,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KR9976P');</script>
     <!-- End Google Tag Manager -->
+    
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
