--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- anti-flicker snippet ("antiparpadeo")  -->
+    <!-- anti-flicker snippet ("antiparpadeo")  
     <style>.async-hide { opacity: 0 !important} </style>
     <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
     h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
     (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
     })(window,document.documentElement,'async-hide','dataLayer',4000,
-    {'OPT-TVG6SQJ':true});</script>
+    {'OPT-TVG6SQJ':true});</script> -->
 
     <!-- EL PRÓXIMO SCRIPT ES LA CONEXIÓN CON ANALYTICS -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
