Cambios flex empleados

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
     })(window,document.documentElement,'async-hide','dataLayer',4000,
     {'OPT-TVG6SQJ':true});</script> -->
 
+    <!-- 
+      ID CONTENEDOR GA: UA-215817657-1
+      ID G OPTIMIZE:    OPT-TVG6SQJ
+      ID TAG MANAGER:   GTM-KR9976P
+    -->
+
     <!-- EL PRÓXIMO SCRIPT ES LA CONEXIÓN CON ANALYTICS -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-215817657-1"></script>
